<resources>
    <string name="app_name">TRACCS MOBILE TIME AND ATTENDANCE</string>
    <!--  <string name="app_name">MTA Integratedliving</string>-->
    <string name="main_activity">TRACCS MOBILE T AND A </string>
    <string name="Recipient">No Value</string>
    <string name="Client_Note_Title">Create Client Note</string>
    <string name="record_incident">Record An Incident</string>
    <string name="daily_dairy">Daily Diary</string>
    <string name="show_alert">Alerts</string>
    <string name="filter">Filters</string>
    <string name="title_activity_main">TRACCS MOBILE TIME AND ATTENDANCE</string>
    <string name="RosterDate">25 January 2020</string>
    <string name="title_activity_shift__detail__view">Client Booking</string>
    <string name="web_service">Web Service</string>
    <string name="client_profile">Client Profile</string>
    <string name="smtp_settings">Set SMTP Settings</string>
    <string name="service_note">Shift Report</string>
    <string name="group_recipient">Group Recipients</string>
    <string name="login_mode">Change Login Mode</string>
    <string name="device_reminders">Reminder</string>
    <string name="document_view">Document View</string>

     <string name="ciam_warning_text">At this moment, CIAM does not support MS Graph, so we cannot call the graph API in this fragment. Instead we will simply output the access token after a succesful request.</string>

    <!-- string name="WeekDuration">Duration: 27/08/2012 to 01/09/2012</string>  -->
    <!--<string name="server">http://hcc.stivesgroup.com.au:82</string>-->
    <!--<string name="server">https://hcc.stivesgroup.com.au:83</string>-->
    <!--<string name="server">http://101.178.90.91/timesheet</string>-->
    <!--<string name="server">https://remote.jccagedcare.org.au/timesheet/</string>-->
    <!--<string name="server">https://timesheet.southcare.org.au/ts2</string>-->
    <string name="server">Set Server</string>

    <string name="version">Version No. 26.07.003</string>

    <!-- >string name="action_settings">"Settings"</string-->

    <string name="form_label_password">Password</string>
    <string name="roster_availability">Add Availability</string>
    <string name="external_dir">GetSignature</string>


    <string name="msg_sending_email">Sending email...</string>
    <string name="msg_email_sent_successfully">Your message was sent successfully.</string>
    <string name="msg_error_sending_email">Error sending email, check your connection</string>

    <string name="title_activity_my_alert">MyAlert</string>

    <string name="title_activity_maps">Map</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>

    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="ic_add">&#xe006;</string>
    <string name="ic_check_circle_blank">&#xe03e;</string>
    <string name="ic_close">&#xe048;</string>

    <string name="ic_email">&#xe087;</string>
    <string name="ic_keyboard_arrow_down">&#xe0c5;</string>

    <!-- String values for Tree view -->

    <string name="ic_keyboard_arrow_right">&#xe0c7;</string>
    <string name="ic_star">&#xe161;</string>
    <string name="ic_star_outline">&#xe163;</string>
    <string name="ic_thumbs_down">&#xe17d;</string>
    <string name="ic_thumbs_up">&#xe17e;</string>
    <string name="ACK">Acknowledge</string>
    <string name="title_activity_client__documents">View Client Documents</string>
    <string name="acknowledge_to_proceed">ACKNOWLEDGE READ ALERTS</string>
    <string name="service_check_list">Service Check List</string>
    <string name="transport_detail">TRANSPORT DETAIL</string>
    <string name="add_leave_title">Add Leave</string>
    <string name="title_upload">Upload Photo</string>
    <string name="add_signature">Add Signature</string>

    <string name="pickup">Pickup From : </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="taketo">Take To : </string>
    <string name="appointment_time">Appointment Time : </string>
    <string name="mobility">Mobility : </string>
    <string name="nav_header_title">Adamas</string>
    <string name="nav_header_subtitle">support@adamas.net.au</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_AddNewAttendees">Add Attendees</string>
    <string name="title_activity_settings">Settings</string>
    <string name="login_menu_set_server">Set Server</string>
    <string name="login_menu_server_link">Server Link</string>
    <string name="login_menu_server_link_value">Enter Http://45.66.78.45:4141</string>
    <string name="login_menu_login_mode">Change Login Mode</string>
    <string name="login_menu_online_status">Work Offline</string>
    <string name="travel">Travel Claim</string>
    <string name="goal_plan">View Plan Goals</string>
    <string name="view_client_note">Notes Management</string>
    <string name="carer_plan_note">Create Care Plan Notes</string>
    <string name="pincode_login">Set Pin Code</string>
    <string name="description">Menu</string>
    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="login_menu_data_refresh">Full Data Refresh</string>
    <string name="login_logout">Log out</string>
    <string name="pref_title_social_recommendations">Server Settings</string>
    <string name="pref_description_social_recommendations">Option used to set server link
    </string>
    <string name="pref_title_display_name">Set Server</string>
    <string name="pref_default_display_name">Http://45.77.37.207/timesheet</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>

    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>

    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <!-- Example settings for Data & Sync -->
    <string name="pref_title_vibrate">Vibrate</string>

    <string name="font_roboto">Roboto regular</string>
    <string name="font_roboto_bold">Roboto bold</string>
    <string name="font_arial">Arial</string>

    <string name="font_arial_bold">Arial Bold</string>
    <string name="address">10 Stone Street, May Land, WA</string>
    <string name="recipient">MTA Muller A</string>
    <string name="time_abel">09:30 - 10:30</string>
    <string name="service_label">MTA Spell Checker</string>

    <!-- Example settings for Notifications -->
    <string name="myAlphaNumericASCII">&#32;!"#$%&amp;'()*+,-./0123456789:;&#60;&#61;&#62;&#63;&#64;ABCDEFGHIJKLMNOPQRSTUVWXYZ [\]^_`	abcdefghijklmnopqrstuvwxyz {|}~&#127; \n\t </string>

    <string-array name="leave_type">
        <item>OTHER LEAVE</item>
        <item>REC LEAVE</item>
        <item>SICK LEAVE</item>
    </string-array>

    <string-array name="filters">
        <item>OP NOTE</item>
        <item>CASE NOTE</item>
        <item>INCIDENT NOTE</item>
        <item>CLINICAL NOTE</item>
        <item>VIEW ALL</item>
    </string-array>

    <string-array name="incident_type">
        <item>BEHAVIOURAL</item>
        <item>CONDUCT</item>
        <item>HEALTHINSURER</item>
        <item>MEDICAL</item>
        <item>PUNCTUALITY / ATTENDANCE</item>
        <item>SERIOUS INCIDENT</item>
        <item>OTHER</item>

    </string-array>

    <string-array name="attendess_options">
        <item></item>
        <item>CLIENT NOTES</item>
        <item>RECORD INCIDENT</item>
        <item>VIEW DOCUMENTS</item>

    </string-array>
    <string-array name="Cycles">
        <item>Select an option</item>
        <item>WEEKLY</item>
        <item>FORTNIGHTLY</item>
        <item>MONTHLY</item>

    </string-array>

    <string-array name="incident_severity">
        <item>LOW</item>
        <item>MEDIUM</item>
        <item>HIGH</item>

    </string-array>

    <string-array name="incident_locations">
        <item>ATE FUNDED OPTION</item>
        <item>COMMUNITY</item>
        <item>COMMUNITY SUPPORT SERVICE</item>
        <item>DSC ACCOMMODATION SERVICE</item>
        <item>DSC GROUP ACCOMMODATION</item>
        <item>FAMILY HOME</item>
        <item>FUNDED ACCOMMODATION SERVICE</item>
        <item>OTHER</item>
        <item>UNKNOWN</item>
        <item>VEHICLE/BUS</item>
    </string-array>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>


    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="btn_signIn">Single SignIn</string>
    <string name="btn_removeAccount">Remove Account</string>
    <string name="btn_callGraphInteractively">call Graph Inter actively</string>
    <string name="btn_callGraphSilently">call Graph Silently</string>
</resources>
